--- a/views/account/subscriptions.pug
+++ b/views/account/subscriptions.pug
@@ -9,7 +9,7 @@ block content
 
         hr
 
-        // TOP PAGINATION
+        //- TOP PAGINATION
         nav.center-block.text-center(aria-label='Page navigation example')
             ul.pagination
                 li.page-item
