--- a/views/livestream/view.pug
+++ b/views/livestream/view.pug
@@ -11,7 +11,7 @@ block content
         script(src='/bower_components/kurento-utils/js/kurento-utils.js')
         script(src='/js/livestreaming/getScreenId.js')
         script(src='/js/livestreaming/screensharing.js')
-        //script(src='/js/livestreaming/index.js')
+        //-script(src='/js/livestreaming/index.js')
         .container
             .row
                 .col-md-12
