--- a/views/mediaBrowsing/recentUploads.pug
+++ b/views/mediaBrowsing/recentUploads.pug
@@ -23,18 +23,18 @@ block content
 
             br
 
-            // CATEGORY DROPDOWN
+            //- CATEGORY DROPDOWN
             .search-upload-buttons-container
                 if category
                     include ../viewPartials/categoryDropdown
 
-                // MEDIA TYPE DROPDOWN
+                //- MEDIA TYPE DROPDOWN
                 include ../viewPartials/mediaDropdown
 
-                // SENSITIVITY TYPE DROPDOWN
+                //- SENSITIVITY TYPE DROPDOWN
                 include ../viewPartials/sensitivityFilterDropdown
 
-                // 5 LINK PAGINATION
+                //- 5 LINK PAGINATION
             include ../viewPartials/pagination
 
             br
