--- a/views/moderator/reports.pug
+++ b/views/moderator/reports.pug
@@ -14,7 +14,7 @@ block content
             p Reason: #{report.reason}
             p Uploading User: #{report.uploadingUser.channelUrl}
             br
-            //p Reported At: #{report.createdAt}
-            //p Reported At: #{report.createdAt}
+            //-p Reported At: #{report.createdAt}
+            //-p Reported At: #{report.createdAt}
 
 
