--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -1,4 +1,4 @@
-// doing this because otherwise it's too annoying with cloudflare caching
+//- doing this because otherwise it's too annoying with cloudflare caching
 style.
 
     @import url('https://rsms.me/inter/inter.css');
