--- a/views/public/about.pug
+++ b/views/public/about.pug
@@ -33,39 +33,32 @@ block content
                         h3 Also following the social media at the bottom of the page and spreading the word is also a great way to help the project, thank you for the support!
                         br
 
-                        //h3(style="display:inline")  Please check out the
-                        //        a(style="margin-left:5px" href="https://github.com/mayeaux/nodetube") GitHub Repo
-                        //h3(style="display:inline") &nbspto see the source code and learn more about the application
-                        //
-                        //br
-                        //h3
-                        //        | Join us for collaboration on
-                        //        a.left(href='https://discord.gg/ejGah8H') Discord
-                        //        | ,
-                        //        a.left(href='https://riot.im/app/#/room/#nodetube:matrix.org') Riot.im (Matrix)
-                        //        |  and
-                        //        a.left(href='https://reddit.com/r/nodetube') Reddit
-
-                        // h3 If you find the project interesting and want to help it succeed please send the link to this live instance and the Github repo around on places like Reddit, Hacker News, Twitter, Facebook, Discord.  Self-promotion is really frowned upon on the internet and the less time I have to do bringing people’s attention to the project the more I can focus on working on improving the software
+                        //- h3(style="display:inline")  Please check out the
+                        //-        a(style="margin-left:5px" href="https://github.com/mayeaux/nodetube") GitHub Repo
+                        //- h3(style="display:inline") &nbspto see the source code and learn more about the application
+                        //- br
+                        //- h3
+                        //-        | Join us for collaboration on
+                        //-        a.left(href='https://discord.gg/ejGah8H') Discord
+                        //-        | ,
+                        //-        a.left(href='https://riot.im/app/#/room/#nodetube:matrix.org') Riot.im (Matrix)
+                        //-        |  and
+                        //-        a.left(href='https://reddit.com/r/nodetube') Reddit
+                        //- h3 If you find the project interesting and want to help it succeed please send the link to this live instance and the Github repo around on places like Reddit, Hacker News, Twitter, Facebook, Discord.  Self-promotion is really frowned upon on the internet and the less time I have to do bringing people’s attention to the project the more I can focus on working on improving the software
 
 
-                        //h3.
-                        //        Github Repo Link
-                        //h3
-                        //        a(href="https://github.com/mayeaux/nodetube") Github Repo
-                        //
-                        ////h3.
-                        ////        Live Instance Link
-                        //h3
-                        //        a(href="https://newtube.app") Live Instance
-                        //h3
-                        //        a(href="https://newtube.app") How-To
-
-
-                        //
-                        //h3.
-                        //        Thank you!
-
+                        //-h3.
+                        //-        Github Repo Link
+                        //-h3
+                        //-        a(href="https://github.com/mayeaux/nodetube") Github Repo
+                        //-h3.
+                        //-        Live Instance Link
+                        //-h3
+                        //-        a(href="https://newtube.app") Live Instance
+                        //-h3
+                        //-        a(href="https://newtube.app") How-To
+                        //-h3.
+                        //-        Thank you!
                         h3.
                                 For copyright claims, or any other reason, please contact newtubedotapp[at]gmail.com
 
@@ -80,14 +73,13 @@ block content
 
                         h4.fw Max Upload Size: 500 MB
 
-                        //h4.fw Max Upload Size (Free Account): 500 MB
+                        //-h4.fw Max Upload Size (Free Account): 500 MB
 
 
                         h4.fw Max Upload Amount: Unlimited
 
-                        //h4.fw Max Upload Size (Plus Account): 2GB
-                        //
-                        //h4.fw Livestreaming Supported (Plus Feature)
+                        //-h4.fw Max Upload Size (Plus Account): 2GB
+                        //-h4.fw Livestreaming Supported (Plus Feature)
 
                         h4.fw Copyright Contact: newtubedotapp[at]gmail.com
 
