--- a/views/public/docs.pug
+++ b/views/public/docs.pug
@@ -47,27 +47,27 @@ block content
             br
             br
 
-            //iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
-            //
-            //p.videoHeader.fw(style="font-size:24px") How To Use NodeTube As A User
+            //-iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+            //-
+            //-p.videoHeader.fw(style="font-size:24px") How To Use NodeTube As A User
 
-            //br
-            //br
-            //br
-            //br
-            //br
-            //
-            //iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
-            //
-            //p.videoHeader.fw(style="font-size:24px") How To Use NodeTube As A Plus User
-            //
-            //p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
-            //
-            //br
-            //br
-            //br
-            //br
-            //br
+            //-br
+            //-br
+            //-br
+            //-br
+            //-br
+            //-
+            //-iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+            //-
+            //-p.videoHeader.fw(style="font-size:24px") How To Use NodeTube As A Plus User
+            //-
+            //-p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
+            //-
+            //-br
+            //-br
+            //-br
+            //-br
+            //-br
 
             iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
 
