--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -60,8 +60,8 @@ block content
 
   div.container(style="text-align:center")
 
-    //.landingVideo(style="margin-top:0px;padding-top:70px;")
-    //  iframe.display-element(src='https://newtube.app/embed/ScMyHdB', frameborder='0', allowfullscreen='' style="width:80%;height:400px;")
+    //-.landingVideo(style="margin-top:0px;padding-top:70px;")
+    //-  iframe.display-element(src='https://newtube.app/embed/ScMyHdB', frameborder='0', allowfullscreen='' style="width:80%;height:400px;")
 
     h1.lead-header.fw Introducing #{brandName}
     h2.tagline-header.fw An open-source YouTube alternative powered by Node.js
