--- a/views/public/search.pug
+++ b/views/public/search.pug
@@ -37,8 +37,8 @@ block content
         div.col-sm-12.text-center(style="margin:0 auto;")
 
 
-        // UPLOADS RESULTS
-        //br
+        //- UPLOADS RESULTS
+        //-br
         div.col-sm-12.text-center(style="margin:0 auto;margin-top:50px;")
             if uploads
                 div.text-center.center-div.search-upload-buttons-container
@@ -90,7 +90,7 @@ block content
 
 
 
-        // USERS RESULTS
+        //- USERS RESULTS
         div.col-sm-12.text-center(style="margin:0 auto;")
             if channels
 
@@ -105,17 +105,17 @@ block content
                     button.fw.btn.btn-primary.btn-lg(style="color:#d8dcde;border-radius:6px;margin-bottom:17px;cursor:pointer;") Search For Uploads
 
 
-                //div.dropdown(style="display:inline;margin-right:15px;")
-                //    button.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px")
-                //        | Search Type: #{capitalizeFirst(searchType)} &nbsp
-                //
-                //        span.caret
-                //
-                //    ul.dropdown-menu.dropdown
-                //        li
-                //            a(href=`/search?searchQuery=${searchQuery}&orderBy=popular&mediaType=${mediaType}&searchType=`) Uploads &nbsp
-                //        li
-                //            a(href=`/search?searchQuery=${searchQuery}&orderBy=newToOld&mediaType=${mediaType}&searchType=user`) Users &nbsp
+                //-div.dropdown(style="display:inline;margin-right:15px;")
+                //-    button.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px")
+                //-        | Search Type: #{capitalizeFirst(searchType)} &nbsp
+                //-
+                //-        span.caret
+                //-
+                //-    ul.dropdown-menu.dropdown
+                //-        li
+                //-            a(href=`/search?searchQuery=${searchQuery}&orderBy=popular&mediaType=${mediaType}&searchType=`) Uploads &nbsp
+                //-        li
+                //-            a(href=`/search?searchQuery=${searchQuery}&orderBy=newToOld&mediaType=${mediaType}&searchType=user`) Users &nbsp
 
                 br
                 br
