--- a/views/socialMedia/oneOffSocialPost.pug
+++ b/views/socialMedia/oneOffSocialPost.pug
@@ -6,7 +6,7 @@ block content
     .content
         form.form-horizontal(id='createSocialPostForm', method='POST')
             input(type='hidden', name='_csrf', value=_csrf)
-            //Channel URL
+            //-Channel URL
             .form-group
                 label.col-sm-3.control-label(for='message') Message
                 .col-sm-7
