--- a/views/viewPartials/popularUploadsNavbar.pug
+++ b/views/viewPartials/popularUploadsNavbar.pug
@@ -7,7 +7,7 @@ div.row
                 else
                     a(href=`/media/popular/${page}?media=${mediaType}&category=${category}&within=${dobj.withinString}`) #{dobj.englishString}
 
-    // last button is determined by whether is all uploads or category currently
+    //- last button is determined by whether is all uploads or category currently
     if category == 'overview'
         div.col-xs-6.col-sm-4.col-sm-2.col-md-2
             h3.fw
