--- a/views/widgets/zopim.pug
+++ b/views/widgets/zopim.pug
@@ -1,4 +1,4 @@
-// Start of  Zendesk Widget script
+//- Start of  Zendesk Widget script
 script#ze-snippet(src=`https://static.zdassets.com/ekr/snippet.js?key=${zopimIdentifier}`)
 
 script.
@@ -8,4 +8,4 @@ script.
       $zopim.livechat.window.hide();
     });
   }, 2000)
-//End of  Zendesk Widget script
+//-End of  Zendesk Widget script
