--- a/views/account/signup.pug
+++ b/views/account/signup.pug
@@ -1,7 +1,5 @@
 extends ../layout
 
-
-
 block content
   style.
     .firstPasswordInput, .confirmPasswordInput {
@@ -13,11 +11,11 @@ block content
       h3.fw.center-block.text-center(style="font-size:33px;") Sign Up
     form.form-horizontal.signup-form(id='signup-form', method='POST')
       input(type='hidden', name='_csrf', value=_csrf)
-      //.form-group
-      //  label.col-sm-3.control-label(for='channelName') Display Name
-      //  .col-sm-7
-      //    input.form-control(type='text', name='channelName', id='channelName', placeholder='The name that shows up for your channel',
-      //    autofocus, minlength=3, maxlength=25, required)
+      //-.form-group
+      //-  label.col-sm-3.control-label(for='channelName') Display Name
+      //-  .col-sm-7
+      //-    input.form-control(type='text', name='channelName', id='channelName', placeholder='The name that shows up for your channel',
+      //-    autofocus, minlength=3, maxlength=25, required)
       .form-group
         label.fw.loginHeader.col-sm-3.control-label(for='channelUrl') Channel Username
         .col-sm-7
@@ -38,7 +36,7 @@ block content
           .form-group.col-md-4(style="margin-left:1pt;")
             .g-recaptcha(data-sitekey=`${recaptchaPublicKey}` id='captcha')
 
-      //var regex = new RegExp("^[a-zA-Z]+$");
+      //-var regex = new RegExp("^[a-zA-Z]+$");
 
       .form-group
         .col-sm-offset-3.col-sm-7
