--- a/views/admin/notifications.pug
+++ b/views/admin/notifications.pug
@@ -6,13 +6,13 @@ block content
     .content
         form.form-horizontal(id='messageForm', method='POST')
             input(type='hidden', name='_csrf', value=_csrf)
-            //Channel URL
+            //- Channel URL
             .form-group
                 label.col-sm-3.control-label(for='channelUrl') Channel url
                 .col-sm-7
                     input.form-control(type='text', name='channelUrl', id='channelUrl')
 
-            //Message for Channel
+            //- Message for Channel
             .form-group
                 label.col-sm-3.control-label(for='message') Message
                 .col-sm-7
