--- a/views/admin/recentReacts.pug
+++ b/views/admin/recentReacts.pug
@@ -25,9 +25,9 @@ block content
             each document in documents
                 if document.upload.uploader
                     div.col-sm-4(style="text-align:center;height:335px")
-                        // NEW CHANNEL UPLOAD FORMAT
+                        //- NEW CHANNEL UPLOAD FORMAT
                         a.title-anchor(href=`/user/${document.upload.uploader.channelUrl}/${document.upload.uniqueTag}`)
-                            // TODO: Sub out thumbnail here
+                            //- TODO: Sub out thumbnail here
                             include ../viewPartials/recentActionThumbnail
 
                         include ../viewPartials/recentActionUploadDetails
