--- a/views/admin/uploads.pug
+++ b/views/admin/uploads.pug
@@ -24,7 +24,7 @@ block content
                             br
 
                         div.upload-details
-                            // capitalize media type
+                            //- capitalize media type
                             div.uploaded-by #{upload.fileType.charAt(0).toUpperCase() + upload.fileType.slice(1)} uploaded by
                                 a(href=`/user/${upload.uploader.channelUrl}`)
                                     p(style="font-size:16px") #{upload.uploader.channelUrl}
@@ -52,14 +52,14 @@ block content
                         h3 #{upload._id}
 
 
-                    //    form(action="/pending" method="POST")
-                    //        input(type='hidden', name='_csrf', value=_csrf)
-                    //        input(type='hidden', name='uniqueTag', value=`${upload.uniqueTag}`)
-                    //        button.btn.btn-success(name="moderationValue" value="approve" type="submit") Approve
-                    //        br
-                    //        br
-                    //        button.btn.btn-danger(name="moderationValue" value="banVideo" type="submit" ) Ban Video
-                    //        br
-                    //        br
-                    //        button.btn.btn-danger(name="moderationValue" value="banVideoAndUser" type="submit") Ban Video And User
-                    //
+                    //-    form(action="/pending" method="POST")
+                    //-        input(type='hidden', name='_csrf', value=_csrf)
+                    //-        input(type='hidden', name='uniqueTag', value=`${upload.uniqueTag}`)
+                    //-        button.btn.btn-success(name="moderationValue" value="approve" type="submit") Approve
+                    //-        br
+                    //-        br
+                    //-        button.btn.btn-danger(name="moderationValue" value="banVideo" type="submit" ) Ban Video
+                    //-        br
+                    //-        br
+                    //-        button.btn.btn-danger(name="moderationValue" value="banVideoAndUser" type="submit") Ban Video And User
+                    //-
