--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,16 +9,16 @@ html
     meta(name='csrf-token', content=_csrf)
     meta(name="description", content=meta.description)
 
-    // TODO: kind of want to remove the - Brandname, it doesn't look great
+    //- TODO: kind of want to remove the - Brandname, it doesn't look great
     meta(property='og:title', content=(meta.title || title))
     meta(property='og:image', content=meta.image)
     meta(property='og:description', content=meta.description)
     meta(property='og:video', content=meta.video)
 
-    // twitter meta tags
-    // trying out large card of twitter
+    //- twitter meta tags
+    //- trying out large card of twitter
     meta(name='twitter:card', content='summary_large_image')
-    //meta(name='twitter:card', content='summary')
+    //-meta(name='twitter:card', content='summary')
     meta(name='twitter:title', content=(meta.title || title))
     meta(name='twitter:description', content=meta.description || "An open-source file hosting platform")
     meta(name='twitter:image', content=meta.image)
@@ -63,10 +63,10 @@ html
     include nodeTubeCss
 
 
-    //layout.pug
+    //-layout.pug
     include layoutPartials/header
 
-    // I feel like this is here and breaks if you move it
+    //- I feel like this is here and breaks if you move it
     include viewPartials/darkLightMode
 
     .container(style="max-width:1250px;padding-left: 0px; padding-right: 0px;margin-top:3px;")
@@ -123,26 +123,26 @@ html
             }
           }
 
-    //script.
-    //  $.magneticScroll({
-    //    speed: 1
-    //  });
+    //-script.
+    //-  $.magneticScroll({
+    //-    speed: 1
+    //-  });
 
 
-    //script.
-    //
-    //  $(document).ready(function () {
-    //    $("body").niceScroll({
-    //      cursorcolor: "aquamarine",
-    //      cursorwidth: "16px",
-    //      'zindex' : 999999999999999,
-    //      scrollspeed: 1,
-    //      smoothscroll: true,
-    //      mousescrollstep: 38
-    //    });
-    //
-    //
-    //  });
+    //-script.
+    //-
+    //-  $(document).ready(function () {
+    //-    $("body").niceScroll({
+    //-      cursorcolor: "aquamarine",
+    //-      cursorwidth: "16px",
+    //-      'zindex' : 999999999999999,
+    //-      scrollspeed: 1,
+    //-      smoothscroll: true,
+    //-      mousescrollstep: 38
+    //-    });
+    //-
+    //-
+    //-  });
 
 
 
