--- a/views/public/embed.pug
+++ b/views/public/embed.pug
@@ -31,8 +31,8 @@ html
         link(rel="stylesheet" href="https://cdn.plyr.io/2.0.16/plyr.css")
 
 
-        //link(href="//vjs.zencdn.net/5.19/video-js.min.css" rel="stylesheet")
-        //script(src="//vjs.zencdn.net/5.19/video.min.js")
+        //-link(href="//vjs.zencdn.net/5.19/video-js.min.css" rel="stylesheet")
+        //-script(src="//vjs.zencdn.net/5.19/video.min.js")
 
 
         script(src="/js/sweetalert.min.js")
