--- a/views/uploading.pug
+++ b/views/uploading.pug
@@ -71,7 +71,7 @@ block content
 
         p(style="font-size:18px;margin-bottom: 10px;") Your current upload file size limit is #{user.privs.uploadSize} MB (#{user.privs.uploadSize / 1000} GB)
 
-        //h3.fw(style="font-size: 30px;") Select Upload
+        //-h3.fw(style="font-size: 30px;") Select Upload
 
         if user.plan == 'free' && plus_enabled
           p You can raise this limit to 2000 MB by subscribing for&nbsp
@@ -115,7 +115,7 @@ block content
                   input.form-group.center-block.text-center(style="max-width:600px;height:35px;border-radius:2px;font-size:20px;font-weight:300;" type="text" name="title" id="title" minlength=3, maxlength=100 required)
                   br
 
-                  // add endpoint for visibility
+                  //- add endpoint for visibility
                   if user.plan == 'plus'
                     label.fw(for='title' style="font-size:20px") Visibility
                     br
@@ -156,7 +156,7 @@ block content
 
 
 
-                  // subcategories
+                  //- subcategories
                   each category in categories
                     if category.subcategories && category.subcategories.length > 1
                       div.subcategories(class=category.name style="display:none;")
@@ -172,7 +172,7 @@ block content
 
 
 
-                  // RATINGS
+                  //- RATINGS
                   label.fw(for='rating' style="font-size:24px;margin-top:26px;margin-bottom:15px;") Rating (*)
                   br
                   div.radio-buttons.rating(style="")
