--- a/views/widgets/google-analytics.pug
+++ b/views/widgets/google-analytics.pug
@@ -1,4 +1,4 @@
-// Google Analytics: change UA-XXXXX-X to be your site's ID
+//- Google Analytics: change UA-XXXXX-X to be your site's ID
 script.
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
